Fix: Content no longer jumps when scrollbar becomes visible/is hidden

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -69,3 +69,7 @@
 .confetti {
   margin-left: 100px;
 }
+
+.scrollbar-fix {
+  overflow-y: scroll;
+}
